--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,258 @@
-.App {
+@font-face {
+  font-family: "torek";
+  src: url("./Toreks Regular.otf");
+}
+
+body {
+  background-image: url("./img/bback.jpeg");
+}
+
+#root {
+  height: 100vh;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+a {
+  display: inline-block;
+  text-decoration: none;
+  color: #c0ec3f;
+}
+a:hover {
+  text-decoration: underline;
+}
+.App-body {
+  position: relative;
+  align-items: center;
+  color: #c0ec3f;
+  padding: 20px;
   text-align: center;
+  font-size: xx-large;
+  letter-spacing: 2px;
+  word-spacing: 4px;
+  font-family: torek;
+}
+.nobglogo {
+  width: 100px;
+  margin-top: 20px;
+}
+.intro {
+  /* text-align: center; */
+  color: #c0ec3f;
+}
+.departments {
+  color: white;
+}
+.poster {
+  width: 100%;
+  object-fit: cover;
+  height: auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.logo {
+  height: 80px;
+  border-radius: 50%;
+  padding: 10px;
+  margin-left: 40px;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  /* background-color: #282c34; */
+  background-color: #121212;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid white;
+}
+
+.navs a {
+  text-align: center;
+  font-weight: bold;
+  font-family: torek;
+  margin: 20px;
+  text-decoration: none;
+  font-size: large;
+  color: white;
+  text-transform: uppercase;
+}
+.navs a:hover {
+  color: #c0ec3f;
+  font-size: larger;
+  text-decoration: underline;
+}
+
+.notnavs {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.poster {
+  height: auto;
+}
+
+footer {
+  margin-top: auto;
+  color: white;
+  width: 100%;
+  text-align: center;
+  text-transform: uppercase;
+  border-top: 1px solid white;
+  height: 0px;
+  overflow-y: hidden;
+  padding-top: 30px;
+  background-color: black;
+}
+.footer-box {
+  position: relative;
+}
+footer p {
+  margin: 5px;
+}
+.footer-rights {
+  color: #c0ec3f;
+  font-weight: bold;
+}
+.footer-email {
+  color: #c0ec3f;
+  font-weight: bold;
+  text-transform: none;
+}
+.hambogir {
+  width: 50px;
+  padding: 10px;
+  display: none;
+}
+.hambogir .bun {
+  width: 80%;
+  height: 5px;
+  background-color: #c0ec3f;
+  border-radius: 5px;
+  margin: 5px;
+}
+
+/*depertments */
+.departments {
+  /* text-decoration: none; */
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  text-align: center;
+  color: #c0ec3f;
+  font-family: torek;
+}
+.departments a {
   color: white;
+  width: 200px;
+}
+.department-logo {
+  width: 200px;
+  border-radius: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+/* department info */
+.department-info,
+.about {
+  text-align: center;
+  color: #c0ec3f;
+  font-family: torek;
+}
+.members-info {
+  margin-top: 75px;
+}
+.member {
+  margin: 50px;
+}
+.member h5 {
+  margin: 0;
+}
+.member-photo {
+  width: 200px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* about */
+.about-buttons {
+  margin: 50px;
+}
+.about-buttons > * {
+  margin: 10px;
+  padding: 10px;
+  background-color: #c0ec3f;
+  color: black;
+  width: 170px;
+  border-radius: 5px;
+}
+
+/* donate */
+.donate {
+  color: white;
+  font-family: torek;
+  text-align: center;
+  margin-bottom: 30px;
+}
+.donate img {
+  width: 250px;
+}
+
+/* panel mebers */
+.panel-members {
+  color: #c0ec3f;
+  font-family: torek;
+  text-align: center;
+}
+.nameNfb {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.nameNfb img {
+  margin: 10px;
+}
+
+@media screen and (max-width: 950px) {
+  .navs a {
+    padding: 5px;
+    font-size: large;
   }
-  to {
-    transform: rotate(360deg);
+}
+@media screen and (max-width: 790px) {
+  .App-body {
+    font-size: medium;
+  }
+  .App-header {
+    flex-direction: column;
+  }
+  .navs {
+    display: none;
+    border-top: 2px solid white;
+  }
+  .navs a {
+    margin: 5px;
+    font-size: large;
+  }
+  .navs-active {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .notnavs {
+    width: 100%;
+  }
+  .hambogir {
+    display: block;
+  }
+}
+
+.footer-box {
+  animation: credits 10s linear infinite;
+}
+
+@keyframes credits {
+  0% {
+    transform: translateY(-5px);
+  }
+  100% {
+    transform: translateY(-270px);
   }
 }
